force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Billing_Frequency__c</fullName>
    <description>Controls the frequency in which this Product is Billed, unit is Months.</description>
    <label>Billing Frequency</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>