force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Cancellation_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Cancellation_Terms__c</fullName>
    <description>Controls the Cancellation time for this Product, unit is Days.</description>
    <label>Cancellation Terms (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>