force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Custom_Unit__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Custom_Unit__c</fullName>
    <description>Represents the custom unit value when Pricing Unit is set to &#39;Custom&#39;.</description>
    <label>Custom Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>