force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Fixed_Price__c</fullName>
    <label>Fixed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>