force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Partner_Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Contract_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contract Terms</label>
    <referenceTo>CHANNEL_ORDERS__Partner_Contract_Terms__c</referenceTo>
    <relationshipLabel>Partner Product Catalog</relationshipLabel>
    <relationshipName>Partner_Product_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>