force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Partner_Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Price_Book_Entry_Id__c</fullName>
    <description>Price Book Entry Id reference on Org62</description>
    <formula>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Pricebook_Entry_Id__c</formula>
    <inlineHelpText>Product Name of Price Book Entry on Org62</inlineHelpText>
    <label>Partner Price Book Entry Id</label>
    <type>Text</type>
</CustomField>