force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Partner_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Product_Name__c</fullName>
    <description>Product Name of Price Book Entry on Org62</description>
    <formula>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Product_Name__c</formula>
    <inlineHelpText>Product Name of Price Book Entry on Org62</inlineHelpText>
    <label>Partner Product Name</label>
    <type>Text</type>
</CustomField>