force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PNR</fullName>
            </value>
            <value>
                <fullName>FIXED</fullName>
            </value>
            <value>
                <fullName>LIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>