force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Pricing_Unit__c</fullName>
    <description>Represents the unit used by the Partner to sell this product.</description>
    <label>Pricing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Org</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>