force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Product_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Special_Terms__c</fullName>
    <label>Product Special Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>