force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Renewal_Terms__c</fullName>
    <description>Represents the length of a renewed contract for this product, unit is Months.</description>
    <label>Renewal Terms (Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>