force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>