force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/validationRules/CHANNEL_ORDERS__Fixed_Price_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Fixed_Price_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;FIXED&quot;),ISNULL(  CHANNEL_ORDERS__Fixed_Price__c ))</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Fixed_Price__c</errorDisplayField>
    <errorMessage>Fixed Price is required if Pricing Type = FIXED</errorMessage>
</ValidationRule>