force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/validationRules/CHANNEL_ORDERS__Fixed_Price_should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Fixed_Price_should_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;PNR&quot;),not(ISNULL( CHANNEL_ORDERS__Fixed_Price__c) ))</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Fixed_Price__c</errorDisplayField>
    <errorMessage>Fixed Price must be blank if Pricing Type = PNR</errorMessage>
</ValidationRule>