force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/validationRules/CHANNEL_ORDERS__PNR_percent_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__PNR_percent_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;PNR&quot;),ISNULL( CHANNEL_ORDERS__PNR__c ))</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__PNR__c</errorDisplayField>
    <errorMessage>PNR % is required if Pricing Type = PNR</errorMessage>
</ValidationRule>