force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/validationRules/CHANNEL_ORDERS__PNR_percent_should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__PNR_percent_should_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(CHANNEL_ORDERS__Pricing_Type__c ,&quot;FIXED&quot;),not(ISNULL( CHANNEL_ORDERS__PNR__c) ))</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__PNR__c</errorDisplayField>
    <errorMessage>PNR % must be blank if Pricing Type = FIXED</errorMessage>
</ValidationRule>