force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/listViews/CHANNEL_ORDERS__All.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All</fullName>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Partner_Contract_Terms__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>