force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/listViews/CHANNEL_ORDERS__COA_Product_View.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__COA_Product_View</fullName>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Unit_Price_Formula__c</columns>
    <columns>CHANNEL_ORDERS__Pricing_Unit__c</columns>
    <columns>CHANNEL_ORDERS__Partner_Product_Name__c</columns>
    <columns>CHANNEL_ORDERS__Partner_Price_Book_Entry_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>COA Product View</label>
</ListView>